Testeo con train y test. Poca data?

--- a/notebooks/train-model.ipynb
+++ b/notebooks/train-model.ipynb
@@ -2,19 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "3d0b0f61",
    "metadata": {},
    "outputs": [],
    "source": [
     "import torch\n",
     "import os\n",
-    "from IPython.display import Image, clear_output"
+    "from IPython.display import Image, clear_output\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "14968d18",
    "metadata": {},
    "outputs": [
@@ -22,15 +22,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[34m\u001b[1mtrain: \u001b[0mweights=yolov5s.pt, cfg=, data=../valve.yaml, hyp=../yolov5/data/hyps/hyp.scratch-low.yaml, epochs=150, batch_size=16, imgsz=416, rect=False, resume=False, nosave=False, noval=False, noautoanchor=False, noplots=False, evolve=None, bucket=, cache=ram, image_weights=False, device=, multi_scale=False, single_cls=False, optimizer=SGD, sync_bn=False, workers=8, project=../yolov5/runs/train, name=exp, exist_ok=False, quad=False, cos_lr=False, label_smoothing=0.0, patience=100, freeze=[0], save_period=-1, seed=0, local_rank=-1, entity=None, upload_dataset=False, bbox_interval=-1, artifact_alias=latest\n",
+      "\u001b[34m\u001b[1mtrain: \u001b[0mweights=yolov5s.pt, cfg=, data=../valve.yaml, hyp=../yolov5/data/hyps/hyp.scratch-low.yaml, epochs=10, batch_size=2, imgsz=576, rect=False, resume=False, nosave=False, noval=False, noautoanchor=False, noplots=False, evolve=None, bucket=, cache=ram, image_weights=False, device=, multi_scale=False, single_cls=False, optimizer=SGD, sync_bn=False, workers=8, project=../yolov5/runs/train, name=exp, exist_ok=False, quad=False, cos_lr=False, label_smoothing=0.0, patience=100, freeze=[0], save_period=-1, seed=0, local_rank=-1, entity=None, upload_dataset=False, bbox_interval=-1, artifact_alias=latest\n",
       "\u001b[34m\u001b[1mgithub: \u001b[0mskipping check (not a git repository), for updates see https://github.com/ultralytics/yolov5\n",
-      "/home/image/.pyenv/versions/lewagon/lib/python3.8/site-packages/torch/cuda/__init__.py:146: UserWarning: \n",
-      "NVIDIA GeForce RTX 3060 Laptop GPU with CUDA capability sm_86 is not compatible with the current PyTorch installation.\n",
-      "The current PyTorch install supports CUDA capabilities sm_37 sm_50 sm_60 sm_70.\n",
-      "If you want to use the NVIDIA GeForce RTX 3060 Laptop GPU GPU with PyTorch, please check the instructions at https://pytorch.org/get-started/locally/\n",
-      "\n",
-      "  warnings.warn(incompatible_device_warn.format(device_name, capability, \" \".join(arch_list), device_name))\n",
-      "YOLOv5 🚀 2022-10-15 Python-3.8.12 torch-1.12.1+cu102 CUDA:0 (NVIDIA GeForce RTX 3060 Laptop GPU, 6144MiB)\n",
+      "YOLOv5 🚀 2022-10-15 Python-3.8.12 torch-1.12.1 CPU\n",
       "\n",
       "\u001b[34m\u001b[1mhyperparameters: \u001b[0mlr0=0.01, lrf=0.01, momentum=0.937, weight_decay=0.0005, warmup_epochs=3.0, warmup_momentum=0.8, warmup_bias_lr=0.1, box=0.05, cls=0.5, cls_pw=1.0, obj=1.0, obj_pw=1.0, iou_t=0.2, anchor_t=4.0, fl_gamma=0.0, hsv_h=0.015, hsv_s=0.7, hsv_v=0.4, degrees=0.0, translate=0.1, scale=0.5, shear=0.0, perspective=0.0, flipud=0.0, fliplr=0.5, mosaic=1.0, mixup=0.0, copy_paste=0.0\n",
       "\u001b[34m\u001b[1mClearML: \u001b[0mrun 'pip install clearml' to automatically track, visualize and remotely train YOLOv5 🚀 in ClearML\n",
@@ -67,51 +61,140 @@
       "Model summary: 214 layers, 7027720 parameters, 7027720 gradients, 16.0 GFLOPs\n",
       "\n",
       "Transferred 343/349 items from yolov5s.pt\n",
-      "\u001b[34m\u001b[1mAMP: \u001b[0mchecks failed ❌, disabling Automatic Mixed Precision. See https://github.com/ultralytics/yolov5/issues/7908\n",
       "\u001b[34m\u001b[1moptimizer:\u001b[0m SGD(lr=0.01) with parameter groups 57 weight(decay=0.0), 60 weight(decay=0.0005), 60 bias\n",
-      "\u001b[34m\u001b[1mtrain: \u001b[0mScanning '/home/image/code/danielcerdae/smart-reader/valve_train_data/lab\u001b[0m\n",
-      "\u001b[34m\u001b[1mtrain: \u001b[0mCaching images (0.0GB ram): 100%|██████████| 2/2 [00:00<00:00, 127.53it/s\u001b[0m\n",
-      "\u001b[34m\u001b[1mval: \u001b[0mScanning '/home/image/code/danielcerdae/smart-reader/valve_train_data/label\u001b[0m\n",
-      "\u001b[34m\u001b[1mval: \u001b[0mCaching images (0.0GB ram): 100%|██████████| 2/2 [00:00<00:00, 51.01it/s]  \u001b[0m\n",
-      "\u001b[34m\u001b[1mAutoAnchor: \u001b[0mERROR: CUDA error: no kernel image is available for execution on the device\n",
-      "CUDA kernel errors might be asynchronously reported at some other API call,so the stacktrace below might be incorrect.\n",
-      "For debugging consider passing CUDA_LAUNCH_BLOCKING=1.\n",
-      "Traceback (most recent call last):\n",
-      "  File \"../yolov5/train.py\", line 632, in <module>\n",
-      "    main(opt)\n",
-      "  File \"../yolov5/train.py\", line 526, in main\n",
-      "    train(opt.hyp, opt, device, callbacks)\n",
-      "  File \"../yolov5/train.py\", line 223, in train\n",
-      "    model.half().float()  # pre-reduce anchor precision\n",
-      "  File \"/home/image/.pyenv/versions/lewagon/lib/python3.8/site-packages/torch/nn/modules/module.py\", line 785, in half\n",
-      "    return self._apply(lambda t: t.half() if t.is_floating_point() else t)\n",
-      "  File \"/home/image/code/danielcerdae/smart-reader/yolov5/models/yolo.py\", line 155, in _apply\n",
-      "    self = super()._apply(fn)\n",
-      "  File \"/home/image/.pyenv/versions/lewagon/lib/python3.8/site-packages/torch/nn/modules/module.py\", line 579, in _apply\n",
-      "    module._apply(fn)\n",
-      "  File \"/home/image/.pyenv/versions/lewagon/lib/python3.8/site-packages/torch/nn/modules/module.py\", line 579, in _apply\n",
-      "    module._apply(fn)\n",
-      "  File \"/home/image/.pyenv/versions/lewagon/lib/python3.8/site-packages/torch/nn/modules/module.py\", line 579, in _apply\n",
-      "    module._apply(fn)\n",
-      "  File \"/home/image/.pyenv/versions/lewagon/lib/python3.8/site-packages/torch/nn/modules/module.py\", line 602, in _apply\n",
-      "    param_applied = fn(param)\n",
-      "  File \"/home/image/.pyenv/versions/lewagon/lib/python3.8/site-packages/torch/nn/modules/module.py\", line 785, in <lambda>\n",
-      "    return self._apply(lambda t: t.half() if t.is_floating_point() else t)\n",
-      "RuntimeError: CUDA error: no kernel image is available for execution on the device\n",
-      "CUDA kernel errors might be asynchronously reported at some other API call,so the stacktrace below might be incorrect.\n",
-      "For debugging consider passing CUDA_LAUNCH_BLOCKING=1.\n",
-      "Exception in thread Thread-26:\n",
-      "Traceback (most recent call last):\n",
-      "Exception in thread Thread-14:\n",
-      "  File \"/home/image/.pyenv/versions/3.8.12/lib/python3.8/threading.py\", line 932, in _bootstrap_inner\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/home/image/.pyenv/versions/3.8.12/lib/python3.8/threading.py\", line 932, in _bootstrap_inner\n"
+      "\u001b[34m\u001b[1mtrain: \u001b[0mScanning '/Users/bita/code/danielcerdae/smart-reader/valve_train_data/lab\u001b[0m\n",
+      "\u001b[34m\u001b[1mtrain: \u001b[0mNew cache created: /Users/bita/code/danielcerdae/smart-reader/valve_train_data/labels.cache\n",
+      "\u001b[34m\u001b[1mtrain: \u001b[0mCaching images (0.0GB ram): 100%|██████████| 1/1 [00:00<00:00, 36.40it/s]\u001b[0m\n",
+      "\u001b[34m\u001b[1mval: \u001b[0mScanning '/Users/bita/code/danielcerdae/smart-reader/valve_test_data/labels\u001b[0m\n",
+      "\u001b[34m\u001b[1mval: \u001b[0mNew cache created: /Users/bita/code/danielcerdae/smart-reader/valve_test_data/labels.cache\n",
+      "\u001b[34m\u001b[1mval: \u001b[0mCaching images (0.0GB ram): 100%|██████████| 1/1 [00:00<00:00, 59.75it/s]  \u001b[0m\n",
+      "\n",
+      "\u001b[34m\u001b[1mAutoAnchor: \u001b[0m1.33 anchors/target, 1.000 Best Possible Recall (BPR). Current anchors are a good fit to dataset ✅\n",
+      "Plotting labels to ../yolov5/runs/train/exp7/labels.jpg... \n",
+      "\n",
+      "Image sizes 576 train, 576 val\n",
+      "Using 0 dataloader workers\n",
+      "Logging results to \u001b[1m../yolov5/runs/train/exp7\u001b[0m\n",
+      "Starting training for 10 epochs...\n",
+      "\n",
+      "      Epoch    GPU_mem   box_loss   obj_loss   cls_loss  Instances       Size\n",
+      "        0/9         0G    0.05115     0.0195    0.01391         12        576: 1\n",
+      "                 Class     Images  Instances          P          R      mAP50   \n",
+      "                   all          1          6          0          0          0          0\n",
+      "\n",
+      "      Epoch    GPU_mem   box_loss   obj_loss   cls_loss  Instances       Size\n",
+      "        1/9         0G     0.0535    0.01889    0.01482          6        576: 1\n",
+      "                 Class     Images  Instances          P          R      mAP50   \n",
+      "                   all          1          6          0          0          0          0\n",
+      "\n",
+      "      Epoch    GPU_mem   box_loss   obj_loss   cls_loss  Instances       Size\n",
+      "        2/9         0G    0.04876    0.01864    0.01242          4        576: 1\n",
+      "                 Class     Images  Instances          P          R      mAP50   \n",
+      "                   all          1          6          0          0          0          0\n",
+      "\n",
+      "      Epoch    GPU_mem   box_loss   obj_loss   cls_loss  Instances       Size\n",
+      "        3/9         0G    0.04455    0.02212    0.01514          4        576: 1\n",
+      "                 Class     Images  Instances          P          R      mAP50   \n",
+      "                   all          1          6          0          0          0          0\n",
+      "\n",
+      "      Epoch    GPU_mem   box_loss   obj_loss   cls_loss  Instances       Size\n",
+      "        4/9         0G    0.04346    0.02204    0.01446          3        576: 1\n",
+      "                 Class     Images  Instances          P          R      mAP50   \n",
+      "                   all          1          6          0          0          0          0\n",
+      "\n",
+      "      Epoch    GPU_mem   box_loss   obj_loss   cls_loss  Instances       Size\n",
+      "        5/9         0G    0.05437    0.01807    0.01074         12        576: 1\n",
+      "                 Class     Images  Instances          P          R      mAP50   \n",
+      "                   all          1          6          0          0          0          0\n",
+      "\n",
+      "      Epoch    GPU_mem   box_loss   obj_loss   cls_loss  Instances       Size\n",
+      "        6/9         0G    0.04463    0.01934    0.01316          3        576: 1\n",
+      "                 Class     Images  Instances          P          R      mAP50   \n",
+      "                   all          1          6          0          0          0          0\n",
+      "\n",
+      "      Epoch    GPU_mem   box_loss   obj_loss   cls_loss  Instances       Size\n",
+      "        7/9         0G    0.04475    0.02057    0.01493          3        576: 1\n",
+      "                 Class     Images  Instances          P          R      mAP50   \n",
+      "                   all          1          6          0          0          0          0\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "      Epoch    GPU_mem   box_loss   obj_loss   cls_loss  Instances       Size\n",
+      "        8/9         0G     0.0515    0.01968    0.01275          3        576: 1\n",
+      "                 Class     Images  Instances          P          R      mAP50   \n",
+      "                   all          1          6          0          0          0          0\n",
+      "\n",
+      "      Epoch    GPU_mem   box_loss   obj_loss   cls_loss  Instances       Size\n",
+      "        9/9         0G    0.04636    0.02112    0.01516          4        576: 1\n",
+      "                 Class     Images  Instances          P          R      mAP50   \n",
+      "                   all          1          6          0          0          0          0\n",
+      "\n",
+      "10 epochs completed in 0.006 hours.\n",
+      "Optimizer stripped from ../yolov5/runs/train/exp7/weights/last.pt, 14.4MB\n",
+      "Optimizer stripped from ../yolov5/runs/train/exp7/weights/best.pt, 14.4MB\n",
+      "\n",
+      "Validating ../yolov5/runs/train/exp7/weights/best.pt...\n",
+      "Fusing layers... \n",
+      "Model summary: 157 layers, 7018216 parameters, 0 gradients, 15.8 GFLOPs\n",
+      "                 Class     Images  Instances          P          R      mAP50   \n",
+      "                   all          1          6          0          0          0          0\n",
+      "Results saved to \u001b[1m../yolov5/runs/train/exp7\u001b[0m\n"
      ]
     }
    ],
    "source": [
-    "!python ../yolov5/train.py --img 416 --batch 16 --epochs 150 --data ../valve.yaml --weights yolov5s.pt --cache"
+    "!python ../yolov5/train.py --img 576 --batch 2 --epochs 10 --data ../valve.yaml --weights yolov5s.pt --cache"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "11c6aea0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "      <iframe id=\"tensorboard-frame-ed72e227c94c78ce\" width=\"100%\" height=\"800\" frameborder=\"0\">\n",
+       "      </iframe>\n",
+       "      <script>\n",
+       "        (function() {\n",
+       "          const frame = document.getElementById(\"tensorboard-frame-ed72e227c94c78ce\");\n",
+       "          const url = new URL(\"/\", window.location);\n",
+       "          const port = 6006;\n",
+       "          if (port) {\n",
+       "            url.port = port;\n",
+       "          }\n",
+       "          frame.src = url;\n",
+       "        })();\n",
+       "      </script>\n",
+       "    "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "%load_ext tensorboard\n",
+    "%tensorboard --logdir runs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "16ced38d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
