Imagenes con mejor resolución

--- a/notebooks/data-preparation.ipynb
+++ b/notebooks/data-preparation.ipynb
@@ -2,24 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "8cfb6862",
+   "execution_count": 16,
+   "id": "18eb1257",
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
+    "from pdf2image import convert_from_path\n",
+    "from PIL import Image\n",
+    "\n",
+    "# Set the max pixel count for Pillow\n",
+    "Image.MAX_IMAGE_PIXELS = 100000000\n",
     "\n",
     "# Create a list with the names of the files in the folder\n",
-    "files = os.listdir('../raw_data/pdf/')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "9768de12",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "files = os.listdir('../raw_data/pdf/')\n",
+    "\n",
     "# Remove this file\n",
     "#files.remove(os.path.basename(__file__))\n",
     "\n",
@@ -40,7 +37,7 @@
     "\n",
     "# Convert each file to png and save it\n",
     "for file in files:\n",
-    "    images = convert_from_path(f'../raw_data/pdf/{file}', 50, grayscale=True, size=(1024,None))\n",
+    "    images = convert_from_path(f'../raw_data/pdf/{file}', dpi=300, grayscale=True, size=(2160,None))\n",
     "    \n",
     "    # This is a list, so extract just the image\n",
     "    images = images[0]\n",
