Importamos el modelo al archivo main.py de la api

--- a/notebooks/Untitled.ipynb
+++ b/notebooks/Untitled.ipynb
@@ -6,7 +6,22 @@
    "id": "081673eb",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from fastapi import File, UploadFile\n",
+    "\n",
+    "@app.post(\"/upload\")\n",
+    "def upload(file: UploadFile = File(...)):\n",
+    "    try:\n",
+    "        contents = file.file.read()\n",
+    "        with open(file.filename, 'wb') as f:\n",
+    "            f.write(contents)\n",
+    "    except Exception:\n",
+    "        return {\"message\": \"There was an error uploading the file\"}\n",
+    "    finally:\n",
+    "        file.file.close()\n",
+    "\n",
+    "    return {\"message\": f\"Successfully uploaded {file.filename}\"}"
+   ]
   }
  ],
  "metadata": {
