Subida de Notebooks preparacion_datos y entrenamiento_modelo

--- a/notebooks/entrenamiento_modelo.ipynb
+++ b/notebooks/entrenamiento_modelo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "0bebc9de",
+   "id": "0ab892af",
    "metadata": {},
    "source": [
     "# Entrenamiento del Modelo"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "45c98529",
+   "id": "240b9196",
    "metadata": {},
    "source": [
     "## Instalar Requerimientos"
@@ -18,48 +18,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "ff4f5f45",
+   "execution_count": null,
+   "id": "b94b1e26",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Cloning into 'yolov5'...\n",
-      "remote: Enumerating objects: 14419, done.\u001b[K\n",
-      "remote: Counting objects: 100% (40/40), done.\u001b[K\n",
-      "remote: Compressing objects: 100% (30/30), done.\u001b[K\n",
-      "remote: Total 14419 (delta 14), reused 21 (delta 10), pack-reused 14379\u001b[K\n",
-      "Receiving objects: 100% (14419/14419), 13.34 MiB | 21.71 MiB/s, done.\n",
-      "Resolving deltas: 100% (9965/9965), done.\n",
-      "/home/fernando/code/danielcerdae/smart-reader/notebooks/yolov5\n",
-      "\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip available: \u001b[0m\u001b[31;49m22.2.2\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m22.3\u001b[0m\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpython -m pip install --upgrade pip\u001b[0m\n",
-      "Note: you may need to restart the kernel to use updated packages.\n",
-      "\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip available: \u001b[0m\u001b[31;49m22.2.2\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m22.3\u001b[0m\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpython -m pip install --upgrade pip\u001b[0m\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/fernando/.pyenv/versions/3.8.12/envs/smart-reader/lib/python3.8/site-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Setup complete. Using torch 1.12.1+cu102 (CPU)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!git clone https://github.com/ultralytics/yolov5  # clone repo\n",
     "%cd yolov5\n",
@@ -75,24 +37,24 @@
   },
   {
    "cell_type": "markdown",
-   "id": "19257b7c",
+   "id": "02a8b8e2",
    "metadata": {},
    "source": [
-    "## Cargar imagenes y definición de label en RoboFlow"
+    "## Creación de conjunto de datos en Roboflow y obtención de pesos"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "f9fb3e7c",
+   "id": "6080408b",
    "metadata": {},
    "source": [
-    "### set up environment"
+    "### Configurar el entorno"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7e0a8d6f",
+   "id": "2b859c7b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,17 +62,9 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "c081009e",
-   "metadata": {},
-   "source": [
-    "### after following the link above, recieve python code with these fields filled in\n"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "268a50e3",
+   "id": "1e56573a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,35 +76,111 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d2101fb9",
+   "id": "c3bde710",
    "metadata": {},
    "source": [
-    "## Obtención de pesos desde Roboflow"
+    "Nota: \n",
+    "\n",
+    "Utilizamos la versión 11 del label generado en Roboflow\n",
+    "\n",
+    "Training Set: 117 imagenes\n",
+    "\n",
+    "Validation Set: 02 imagenes\n",
+    "\n",
+    "Testing: 0 imagenes\n",
+    "\n",
+    "Preproccesing:\n",
+    "\n",
+    "1.- Auto-Orient: Applied\n",
+    "\n",
+    "2.- Auto-Adjust Contrast: Using Adaptive Equalization\n",
+    "\n",
+    "Augmentations:\n",
+    "\n",
+    "1.- Outputs per training example: 3\n",
+    "\n",
+    "2.- Flip: Horizontal, Vertical\n",
+    "\n",
+    "3.- 90° Rotate: Clockwise, Counter-Clockwise, Upside Down"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a1b3641d",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
-   "id": "9ab6df4d",
+   "id": "e2baba31",
    "metadata": {},
    "source": [
     "# Entrenamiento modelo YOLOV5"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "14b62ab9",
+   "metadata": {},
+   "source": [
+    "Nota: \n",
+    "\n",
+    "img 1024 (Define tamaño de las imagenes de entrada)\n",
+    "\n",
+    "batch 8 para el modelo yolov5l6 (cuando se probó con un yolov mas antiguo se utilizó batch 16)\n",
+    "\n",
+    "data: Nuestro dataset está guardado en dataset.location\n",
+    "\n",
+    "weights: specify a path to weights to start transfer learning from.\n",
+    "\n",
+    "cache: Se utiliza cache images para entrenamiento rápido"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9ee32e0e",
+   "id": "8e662774",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "!python train.py --img 1024 --batch 8 --epochs 300 --data {dataset.location}/data.yaml --weights yolov5l6.pt --cache"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4dcb9237",
+   "metadata": {},
+   "source": [
+    "## Ejecutar inferencia con pesos entrenados \n",
+    "Run inference with a pretrained checkpoint on contents of `test/images` folder downloaded from Roboflow."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "729a22a0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!python detect.py --weights runs/train/exp/weights/best.pt --img 1280 --conf 0.5 --source {dataset.location}/test/images"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e0537188",
+   "metadata": {},
+   "source": [
+    "## Visualizar inferencia en todas las imagenes TEST"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b10acfa5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import glob\n",
+    "from IPython.display import Image, display\n",
+    "\n",
+    "for imageName in glob.glob('/content/yolov5/runs/detect/exp/*.jpg'): #assuming JPG\n",
+    "    display(Image(filename=imageName))\n",
+    "    print(\"\\n\")"
+   ]
   }
  ],
  "metadata": {
