add support for the latest sahi version

--- a/notebooks/Final_notebook.ipynb
+++ b/notebooks/Final_notebook.ipynb
@@ -15,7 +15,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sahi.model import Yolov5DetectionModel\n",
+    "from sahi import AutoDetectionModel\n",
     "from sahi.utils.cv import read_image\n",
     "from sahi.utils.file import download_from_url\n",
     "from sahi.predict import get_prediction, get_sliced_prediction, predict\n",
@@ -100,7 +100,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "detection_model = Yolov5DetectionModel(\n",
+    "detection_model = AutoDetectionModel.from_pretrained(\n",
+    "    model_type=\"yolov5\",\n",
     "    model_path=trained_model_path,\n",
     "    confidence_threshold=0.6,\n",
     "    device=\"cuda:\") # or 'cuda:0'"
